--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" type="text/css" href="css/estilo.css" >
 </head>
 <body>
-<h1>Esto es una prueba desde la clase</h1>
+<h1>esto clase</h1>
+<p> mary <p>
 <button type="button" onclick="pulsado(this)">No pulses!</button>
 
 <script src="javascript/codigo.js"></script>
